# rats.nest

./: .gitignore  .gitmodules  CMakeLists.txt  MainPacks.cmake  README.md  config.lua  xmake.lua
_build/tools/libntfslink/: xmake.lua
_build/tools/libntfslink/dll/: Api.h  Hardlink.cpp  Hardlink.h  StringUtils.cpp  Symlink.cpp  lua_interface.cpp  lua_interface.h
_build/tools/libntfslink/test/: JunctionTest.cpp  SymlinkTest.cpp  libntfslinksTest.cpp
_build/xmake/: namespaces.lua  rats.lua  table.lua
_build/xmake/rats/: namespaces.lua  rats_desc.lua  rats_os.lua  rp.lua  thirdparty-justification.schema.yml  tt.lua
_build/xmake/rats/ntfs_link/: README.md  xmake.lua
_build/xmake/rats/ntfs_link/dll/: CharUtils.cpp  CharUtils.h  Junction.cpp  Junction.h  Symlink.h  lua_interface.cpp  lua_interface.h
cmake/: rats.cmake  rats.cpm.cmake  rats.environment.cmake  rats.moduleSupport.cmake  rats.packs.cmake  rats.utils.cmake  rats.vcpkg.cmake
packs/libs/freetype/: CMakeLists.txt
packs/libs/imgui/: CMakeLists.txt
packs/libs/vulkan/: CMakeLists.txt
packs/rats/core/base/: _.lua  base.xm.lua  xmake.lua
packs/rats/core/base/tests/: null_handling.test.cpp  strings.test.cpp
packs/rats/core/imgui/: imgui.xm.lua  xmake.lua
packs/rats/core/rats.imgui/: CMakeLists.txt
packs/rats/core/rats.imgui/src/: rats.imgui.ixx
packs/rats/core/tasks/: xmake.lua
packs/rats/libs/rapidyaml/: xmake.lua
packs/rats/libs/stringzilla/: xmake.lua
packs/tests/rats.cmake_tests/: CMakeLists.txt
packs/tests/rats.cmake_tests/check_directories/: directories.cmake
(+34 files in other folders)
